changes before i go to bed

--- a/src/client_original/index.html
+++ b/src/client_original/index.html
@@ -149,13 +149,14 @@ Description: This is my main page!
       <hr class="featurette-divider">
     </div>
 
+
     <!-- FOOTER -->
     <footer class="container">
       <p class="float-end"><a href="#">Back to top</a></p>
       <p>&copy; <span id="copyright"></span> Alyssa Bhagwandin. &middot; <a href="privacy-policy.html">Privacy</a> &middot; <a href="terms.html">Terms</a></p>
     </footer>
     <!-- JavaScript Files -->
-    <!-- Added this because the instructions said to put it at the bottom. -->
+    <!-- Added this becuase the instructions said to put it at the bottom. -->
     <script src="../../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script type="module" src="app/app.js"></script>
     <script type="module" src="app/animals/create.js" ></script>
