--- a/src/client_original/index.html
+++ b/src/client_original/index.html
@@ -149,6 +149,7 @@ Description: This is my main page!
       <hr class="featurette-divider">
     </div>
 
+    <div id="app"></div>
 
     <!-- FOOTER -->
     <footer class="container">
